src/components/HomeAbout/HomeAbout.scss
@use "../../styles/partials/globals" as *;
@use "../../styles/partials/mixins" as *;
@use "../../styles/partials/variables" as *;
@use "../../styles/partials/typography" as *;

.about {
  width: 100%;
  height: 100vh;
  background-color: $CloudWhite;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1.5rem;
  margin-top: 3rem;
  overflow: none;

  @include largemobile {
    padding: 1.5rem;
  }

  @include tablet {
    padding: 3rem;
  }

  @include largetablet {
    padding: 3rem;
  }

  @include desktop {
    padding: 5rem;
  }

  @include largedesktop {
    padding: 5rem;
  }

  &__container {
    display: flex;
    flex-direction: column;

    @include largedesktop {
      padding: 0 6rem;
    }
  }

  &__title {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    padding: 1.5rem 1.5rem;
  }

  &__details {
    display: flex;
    flex-direction: column;
    gap: 0.8rem;
  }

  &__subdetails {
    height: fit-content;
    box-sizing: border-box;
    display: flex;
    overflow-x: auto;
    overflow: scroll;
    scroll-behavior: smooth;
    scroll-snap-type: x mandatory;

    @include largemobile {
      height: fit-content;
    }

    @include tablet {
      height: calc(100vh - 5rem - 5rem);
    }

    @include largetablet {
      height: calc(100vh - 5rem - 5rem);
    }

    @include desktop {
      height: calc(100vh - 6rem - 6rem);
    }

    @include largedesktop {
      height: calc(100vh - 6rem - 6rem);
    }
  }
  &__card {
    height: calc(100vh - 5rem - 5rem);
    box-sizing: border-box;
    overflow: scroll;
    scroll-snap-align: start;
    display: flex;
    flex-direction: column;
    flex: 0 0 23.3125rem;
    justify-content: flex-start;
    gap: 1.5rem;
    padding: 0 1.5rem;

    @include largemobile {
      flex-direction: column;
      flex: 0 0 39.875rem;
      gap: 2rem;
    }

    @include tablet {
      overflow: hidden;
      flex-direction: row;
      flex: 0 0 47.875rem;
      align-items: center;
      gap: 3rem;
    }

    @include largetablet {
      overflow: hidden;
      flex-direction: row;
      flex: 0 0 63.875rem;
      align-items: center;
      gap: 4rem;
    }

    @include desktop {
      overflow: hidden;
      flex-direction: row;
      flex: 0 0 79.875rem;
      align-items: center;
      gap: 5rem;
    }

    @include largedesktop {
      overflow: hidden;
      flex-direction: row;
      flex: 0 0 94.875rem;
      align-items: center;
      gap: 6rem;
    }
  }

  &__story {
    width: 100%;
    line-height: 1.5rem;
  }

  &__img {
    box-sizing: border-box;
    width: 100%;
    border-radius: 20px;
    margin-left: auto;
    margin-right: auto;

    @include largemobile {
      width: 70%;
    }

    @include tablet {
      width: 50%;
    }

    @include largetablet {
      width: 40%;
    }

    @include desktop {
      width: 40%;
    }

    @include largedesktop {
      width: 40%;
    }
  }
}

